[gd_scene load_steps=2 format=2]

[ext_resource path="res://Prototype/DrawingSurface/DrawableSpawner.gd" type="Script" id=4]

[node name="DrawingSurface" type="Node2D"]

[node name="DrawableSpawner" type="Node2D" parent="."]
position = Vector2( 331, 245 )
script = ExtResource( 4 )

[node name="Selector" type="Control" parent="."]
anchor_right = 1.0

[node name="SpawnSquare" type="Button" parent="Selector"]
anchor_right = 1.0
margin_bottom = 20.0
text = "Spawn Square"

[node name="SpawnCirlce" type="Button" parent="Selector"]
anchor_right = 1.0
margin_top = 20.0
margin_right = 99.0
margin_bottom = 40.0
text = "Spawn Circle"

[connection signal="pressed" from="Selector/SpawnSquare" to="DrawableSpawner" method="_on_spawn_square_buttom_pressed"]
[connection signal="pressed" from="Selector/SpawnCirlce" to="DrawableSpawner" method="_on_spawn_cirlce_buttom_pressed"]
